# scholar-pulse

./: .env.example  .gitignore  GEMINI.md  README.md  digest.md  pyproject.toml
.github/workflows/: test.yml
src/pulse/: config.py  export.py  main.py  models.py  service.py  storage.py
src/pulse/providers/: __init__.py  base.py  openalex.py  semantic_scholar.py
tests/: helpers.py  test_cache.py  test_config.py  test_export.py  test_main.py  test_service.py  test_storage.py
