[project]
name = "scholar-pulse"
version = "0.1.0"
description = "A CLI tool to aggregate, rank, and export academic papers for NotebookLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "tomli-w>=1.2.0",
    "typer>=0.21.1",
]
[project.scripts]
pulse = "pulse.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
